syntax = "proto2";

import "message-parts.proto";

package blockchain.proto.protobuf;
option java_package = "io.scalechain.blockchain.proto.protobuf";
option optimize_for = SPEED;

message BlockConsensus {
    required BlockHeader header = 1;
    required int64       height = 2;
}
